--- a/app/src/Player.css
+++ b/app/src/Player.css
@@ -1,29 +1,34 @@
 .Move-controls {
   margin: auto;
   width: 380px;
+  text-align: center;
 }
 
-.Move-controls * {
+.Player-controls * {
   display: inline-block;
-  margin-right: 4px;
+  margin-bottom: 8px;
 }
 
-.Move-controls input {
-  padding: 1px 1px;
-}
-
-.Move-controls img {
-  height: 24px;
+.Player-controls img {
+  height: 42px;
   cursor: pointer;
+  padding-left: 6px;
+  padding-right: 6px;
   vertical-align: bottom;
 }
 
-.Plain-move-gif-large {
-  visibility: hidden;
+.Frame-controls * {
+  display: inline-block;
 }
 
-.Plain-move-gif-small {
-  visibility: hidden;
+.Frame-controls select,input {
+  margin-left: 4px;
+  margin-right: 16px;
+}
+
+.Frame-controls input {
+  padding: 2px 2px;
+  width: 3.5em;
 }
 
 @media only screen and (min-width: 768px) {
