--- a/app/src/index.css
+++ b/app/src/index.css
@@ -16,3 +16,8 @@ body {
   font-family: sans-serif;
   text-align: center;
 }
+
+#container {
+  height: 150vh;
+  overflow-y: scroll;
+}
